--- a/DatabaseAnalizer/Views/MainWindow.xaml
+++ b/DatabaseAnalizer/Views/MainWindow.xaml
@@ -1,46 +1,50 @@
-﻿<Window x:Class="DatabaseAnalizer.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:System="clr-namespace:System;assembly=mscorlib" x:Class="DatabaseAnalizer.MainWindow"
         Title="MainWindow" Height="812" Width="1331.625">
 
     <Grid>
-        <Menu  Height="26" Name="meniu1" VerticalAlignment="Top" Margin="0,0,10,0" >
-            <MenuItem Header="_File" Name="menuFile">
-                <MenuItem Header="Select DB">
-                </MenuItem>
-                <MenuItem Header="Exit" Click="Exit_click">
-                </MenuItem>
+        <Menu  Height="26" x:Name="meniu1" VerticalAlignment="Top" Margin="0,0,10,0" >
+            <MenuItem Header="_File" x:Name="menuFile">
+                <MenuItem Header="Select DB"/>
+                <MenuItem Header="Exit" Click="Exit_click"/>
             </MenuItem>
             <MenuItem Header="_View"/>
             <MenuItem Header="_About"/>
             <WrapPanel Height="100" Width="100"/>
         </Menu>
-        <TextBox Name="data_displayer" Margin="169,0,332,40" TextWrapping="Wrap" Text="" Height="170" VerticalAlignment="Bottom" ScrollViewer.VerticalScrollBarVisibility="Auto"/>
+        <TextBox x:Name="data_displayer" Margin="169,0,332,40" TextWrapping="Wrap" Text="" Height="170" VerticalAlignment="Bottom" ScrollViewer.VerticalScrollBarVisibility="Auto"/>
 
 
         <ToolBar Height="28" Margin="0,31,10,0" VerticalAlignment="Top">
-            <Label Width="70" Focusable="false" IsEnabled="False">Select DB :</Label>
-            <ComboBox Name="Databases_list" Height="23" Margin="0" VerticalAlignment="Top" Width="120" SelectionChanged="Databases_list_SelectionChanged">
-
-            </ComboBox>
+            <Label Width="70" Focusable="false" IsEnabled="False" Content="Select DB :"/>
+            <ComboBox x:Name="Databases_list" Height="23" Margin="0" VerticalAlignment="Top" Width="120" SelectionChanged="Databases_list_SelectionChanged"/>
         </ToolBar>
         <ScrollViewer Margin="10,64,0,45" VerticalScrollBarVisibility="Auto" HorizontalAlignment="Left" Width="154">
-            <StackPanel Name="ButtonsPanel"  HorizontalAlignment="Left" Width="133"/>
+            <StackPanel x:Name="ButtonsPanel"  HorizontalAlignment="Left" Width="133"/>
         </ScrollViewer>
         <TabControl x:Name="tab_main" Margin="169,64,332,215">
             <TabItem x:Name="tab_table_data" Header="Table data">
                 <Grid Background="#FFE5E5E5" Margin="0,0,1,0">
-                    <DataGrid Name="table_data" />
+                    <DataGrid x:Name="table_data" />
                 </Grid>
             </TabItem>
             <TabItem Header="TabItem">
-                <Grid Background="#FFE5E5E5"/>
+                <Grid Background="#FFE5E5E5">
+                    <Grid.ContextMenu>
+                        <ContextMenu/>
+                    </Grid.ContextMenu>
+                    <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+                        <Canvas MouseRightButtonUp="canvas_MouseRightButtonUp" MouseMove="Canvas_MouseMove" AllowDrop="True" Background="Transparent" Drop="DropHandler" HorizontalAlignment="Left" Height="461" Margin="10,10,0,0" VerticalAlignment="Top" Width="803"/>
+                    </ScrollViewer>
+                </Grid>
             </TabItem>
         </TabControl>
         <TabControl Margin="0,86,10,40" HorizontalAlignment="Right" Width="317">
             <TabItem Header="Table parametres">
                 <Grid Background="#FFE5E5E5" HorizontalAlignment="Right" Width="300">
-                    <DataGrid Name="Table_parametres" Margin="-14,0,0,0" ScrollViewer.HorizontalScrollBarVisibility="Disabled" HorizontalAlignment="Right" Width="314"/>
+                    <DataGrid x:Name="Table_parametres" Margin="-14,0,0,0" ScrollViewer.HorizontalScrollBarVisibility="Disabled" HorizontalAlignment="Right" Width="314"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Table settings">
