--- a/DatabaseAnalizer/Views/MainWindow.xaml
+++ b/DatabaseAnalizer/Views/MainWindow.xaml
@@ -24,22 +24,31 @@
         <ScrollViewer Margin="10,64,0,45" VerticalScrollBarVisibility="Auto" HorizontalAlignment="Left" Width="154">
             <StackPanel x:Name="ButtonsPanel"  HorizontalAlignment="Left" Width="133"/>
         </ScrollViewer>
-        <TabControl x:Name="tab_main" Margin="169,64,332,215">
+        <TabControl x:Name="tab_main" Margin="169,59,332,210">
             <TabItem x:Name="tab_table_data" Header="Table data">
                 <Grid Background="#FFE5E5E5" Margin="0,0,1,0">
                     <DataGrid x:Name="table_data" />
                 </Grid>
             </TabItem>
-            <TabItem Header="TabItem">
-                <Grid Background="#FFE5E5E5">
+            <TabItem Header="Database tables relations" >
+                <Grid Background="#FFE5E5E5" Margin="0,-2,-2,-5" >
                     <Grid.ContextMenu>
                         <ContextMenu/>
                     </Grid.ContextMenu>
-                    <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
-                        <Canvas MouseRightButtonUp="canvas_MouseRightButtonUp" MouseMove="Canvas_MouseMove" AllowDrop="True" Background="Transparent" Drop="DropHandler" HorizontalAlignment="Left" Height="461" Margin="10,10,0,0" VerticalAlignment="Top" Width="803"/>
+                    <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Margin="0,0,0,27">
+                        <Canvas  MouseRightButtonUp="canvas_MouseRightButtonUp" MouseMove="Canvas_MouseMove" AllowDrop="True" Background="Transparent" Drop="DropHandler" Height="3000" Width="3000"/>
                     </ScrollViewer>
+                    <ToolBarPanel Canvas.Left="0" Canvas.Top="459" VerticalAlignment="Bottom">
+                        <Button Content="Generate" HorizontalAlignment="Left" Width="Auto" PreviewMouseDown="Generate_PreviewMouseDown"/>
+                    </ToolBarPanel>
+                </Grid>                
+            </TabItem>
+            <TabItem x:Name="tab_generated_table_data" Header="Generated data">
+                <Grid Background="#FFE5E5E5" Margin="0,0,1,0">
+                    <DataGrid x:Name="geberated_table_data" />
                 </Grid>
             </TabItem>
+            
         </TabControl>
         <TabControl Margin="0,86,10,40" HorizontalAlignment="Right" Width="317">
             <TabItem Header="Table parametres">
