--- a/DatabaseAnalizer/Views/MainWindow.xaml
+++ b/DatabaseAnalizer/Views/MainWindow.xaml
@@ -49,7 +49,7 @@
             </TabItem>
             <TabItem x:Name="tab_generated_table_data" Header="Generated data">
                 <Grid Background="#FFE5E5E5" Margin="0,0,1,0">
-                    <DataGrid x:Name="geberated_table_data" />
+                    <DataGrid x:Name="geberated_table_data" AutoGeneratingColumn="r2_AutoGeneratingColumn"/>
                 </Grid>
             </TabItem>
 
